k8s/base/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress-controller
  template:
    metadata:
      labels:
        app: nginx-ingress-controller
    spec:
      containers:
        - name: nginx-ingress-controller
          image: k8s.gcr.io/ingress-nginx/controller:v1.1.0
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: nginx-ingress-controller
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
      protocol: TCP
