k8s/base/nginx/alloy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy-ui
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-services: alloy
spec:
  ingressClassName: nginx
  rules:
    - host: alloy.samliu.website
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alloy
                port:
                  number: 12345
  tls:
    - hosts:
        - alloy.samliu.website
      secretName: cloudflare-ssl
