k8s/base/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-services: backend
spec:
  ingressClassName: nginx
  rules:
    - host: api.samliu.website
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: fake-blocked-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
  tls:
    - hosts:
        - api.samliu.website
      secretName: cloudflare-ssl
